# dss-sdk

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  README  README.md  README_INSTALL.txt  __init__.py  build.sh  build_env  build_nkvrelease.sh  genrpm.sh  sonar-project.properties
.github/workflows/: build.yml  dss-sdk.yml
.gitlab/: archive.yml  build.yml  coverage.yml  defaults.yml  pycodestyle.yml  shellcheck.yml  sonar.yml  unittest.yml
ansible/: .ansible-lint  .yamllint.yml  DFLY_CONFIG  README.md  build_ufm_alone.sh  deploy_all.yml  deploy_haproxy.yml  deploy_targets.yml  deploy_ufm.yml  hosts  install_build_deps.yml  play.yml  reset.yml  reset_all.yml  test.yml
ansible/group_vars/: all.yml  clients  config.yml  image.yml  rollback_image.yml  targets.yml
ansible/host_vars/: msl-dsma-dev60.sample
buildspec/: dss-sdk-build.yml  dss-sdk-unit-test.yml  dss-sdk.yml  pycodestyle.yml  sonar-scanner.yml  target-unit-test-coverage-report.yml
cm/agent/: PYTHON_DEPENDENCIES.txt  README  kv-cli.py
cm/agent/device_driver_setup/: driver_setup.py
cm/agent/server_info/: device_ioctl.py  server_attributes_aggregator.py
cm/agent/spdk_config_file/: spdk_config.py
cm/agent/test/: osm_unittest.py
cm/agent/udev_monitor/: 99-nvme-hotplug.rules
cm/agent/utils/: backend_layer.py  daemon_config.py  jsonrpc.py  log_setup.py  target_events_processing.py  usr_signal.py  utils.py  validate_kv.py
cm/clusterlib/: lib.py  lib_constants.py
cm/events/: event_notification.py  events.py  events_def_en.py  zeromq_broker.py
cm/logger/: cm_logger.py
config/: event_mapping.json  nkv_1dconfig.json  nkv_2dconfig.json  nkv_ad_cfg.json  nkv_config.json  nkv_config_emul.json  nkv_config_for_both_remote_local_kv.json  nkv_config_for_both_remote_local_kv_auto_discovery.json  nkv_config_remote.json  smglogger.properties  start.sh
host/: CMakeLists.txt  LICENSE  README  README.md  README_INSTALL.txt  build.sh  generate_version.sh  openmpdk.patch
host/config/: nkv_config.json  nkv_config_emul.json  nkv_config_for_both_remote_local_kv.json  nkv_config_rdd.json  nkv_config_remote.json  smglogger.properties
host/include/: nkv_api.h  nkv_const.h  nkv_result.h  nkv_struct.h
host/scripts/: disk_stats.py  dss_host.py  minio_cleanup.sh  start.sh
host/scripts/minio_startup_scripts/: README.txt  auto_discovery.py  config.json  config.py  fabric_manager.py  minio.py  requirements.txt  utility.py
host/src/: nkv_api.cpp  nkv_framework.cpp  nkv_utils.cpp
host/src/include_private/: auto_discovery.h  cluster_map.h  event_handler.h  fabric_manager.h  native_fabric_manager.h  nkv_framework.h  nkv_stats.h  nkv_utils.h  redfish.h  unified_fabric_manager.h
host/src/logger/libsmglog/: CMakeLists.txt
host/src/logger/libsmglog/configure/: smglogger.properties
host/src/logger/libsmglog/inc/: csmglogger.h
host/src/logger/libsmglog/src/: csmglogger.cpp  smglogger.cpp
host/src/logger/libsmglog/test/: CMakeLists.txt  SmgLoggerTest.cpp
host/src/remote/: auto_discovery.cpp  cluster_map.cpp  event_handler.cpp  native_fabric_manager.cpp  redfish.cpp  unified_fabric_manager.cpp
host/src/stats/: nkv_stats.cpp
host/src/test/: nkv_test_cli.cpp  rdd_cl.h
include/: nkv_api.h  nkv_const.h  nkv_result.h  nkv_struct.h
scripts/: README.md  astyle2checkstyle.sh  astyle_excludes.txt  auto_discovery.py  build_all.sh  build_env  build_nkv_agent.sh  build_nkvrelease.sh  build_target.sh  build_target_only.sh  build_ufm.sh  cluster_map.py  collect_dss.sh  config.py  genrpm.sh  pycodestyle  run_minio.py  shellcheck.sh  spdk_trace_post.py  start.sh  test.sh  utility.py
scripts/dependencies/: install.sh
scripts/dependencies/os/: centos.sh  common.sh  rocky.sh  ubuntu.sh
scripts/dependencies/python/: requirements.txt
scripts/docker/: centos7.DOCKERFILE  rocky8.DOCKERFILE  rocky9.DOCKERFILE  ubuntu22.DOCKERFILE
scripts/stat/: disk_stats.py
spec/: nkv_api_minio_v0.5.docx  nkv_api_v1.0.docx
src/: cluster_map.cpp  nkv_api.cpp  nkv_framework.cpp  nkv_utils.cpp
src/include_private/: auto_discovery.h  cluster_map.h  event_handler.h  nkv_framework.h  nkv_utils.h
src/logger/: CMakeLists.txt
src/logger/libsmglog/: CMakeLists.txt
src/logger/libsmglog/coverage/: CMakeLists.txt
src/logger/libsmglog/inc/: csmglogger.h  smglogger.hpp
src/logger/libsmglog/src/: csmglogger.cpp  smglogger.cpp
src/logger/libsmglog/test/: SmgLoggerTest.cpp
src/remote/: auto_discovery.cpp  cluster_map.cpp
src/remote/include/: auto_discovery.h  cluster_map.h
src/test/: nkv_test_cli.cpp
systemtests/: conftest.py  test_dss_host.py  test_dss_target.py
tests/: conftest.py  requirements.txt  test_disk_stats.py  test_dss_host.py  test_dss_target.py
ufm/: .gitignore  AUTHORS  LICENSE.md  README.md  requirements.txt
ufm/adm/: ufmadm.json  ufmadm.py  ufmadm_eth.py  ufmadm_fabrics.py  ufmadm_main.py  ufmadm_ports.py  ufmadm_stor.py  ufmadm_switches.py  ufmadm_sys.py  ufmadm_ufm.py  ufmadm_util.py  ufmadm_vlans.py  ufmapi.py  ufmmenu.py
ufm/agents/: requirements.txt
ufm/agents/nkv_agent/: README.md  kv-cli.py  makenkvagentpackage.sh
ufm/cm/: README.md  fabricmanager.yml  hosts
ufm/doc/: makeDoc.sh
ufm/doc/source/: index.rst  ufm_config.rst
ufm/docs/: UFM-Redfish-API.docx  makeDoc.sh
ufm/docs/source/: UFM-Redfish-API.docx  conf.py  index.rst  license.rst  ufm_config.rst
ufm/fabricmanager/: INSTALL  README.md  config.py  fabricmanager.py  makeufmpackage.sh  scan_for_essd.py  tst.py  ufm.py  ufm.yaml  ufm_msg_server.py  ufm_status.py  ufm_thread.py
ufm/fabricmanager/DEBIAN/: control  postinst  postrm  preinst  prerm
ufm/fabricmanager/backend/: local-config.json  populate.py
ufm/fabricmanager/rest_api/: resource_dictionary.py  resource_manager.py  static_data_loader.py
ufm/fabricmanager/systemd_files/: gunicorn.service  ufm.service  (+1 more)
ufm/ufm_msg_broker/: makebrokerpackage.sh  ufm_msg_broker.py
unittests/: conftest.py  pytest_config.json  test_dss_host.py  test_dss_target.py
utils/: CMakeLists.txt
utils/include/: rdd_cl_api.h
utils/rdd_cl/: CMakeLists.txt  rdd_cl.c  rdd_cl.h
(+305 files in other folders)
